test/asm/fixed-point-precision.err
error: Fixed-point constant precision must be between 1 and 31
    at fixed-point-precision.asm(22)
error: Fixed-point constant precision 0 invalid, defaulting to 16
    at fixed-point-precision.asm(23)
Assembly aborted with 2 errors
